tests/should-fail/shadowing-2.j
globals
    integer i
endglobals

//# +shadow
function foo takes integer i returns nothing
endfunction
